--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Proyecto de sitio Web 2022-2</h1>
+    <h1>Proyecto de sitio Web 2022-16-02</h1>
     <br>
     <h3>Luis Gustavo Gomez Esteban </h3>
     <br>
