--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>24/02/2022</h3>    
     <p>Correo: luisgusg10@hotmail.com</p>
     <p>numero: 3183329567</p>
+    <A href="Fase 2/desing.html">Link </A>
+
 </body>
 </html>
