--- a/Fase 2/desing.html
+++ b/Fase 2/desing.html
@@ -200,7 +200,12 @@
         <p>uniwebsidad. (26 de Abril de 2022). uniwebsidad. Obtenido de <a href="https://uniwebsidad.com/libros/xhtml/capitulo-2/etiquetas-y-atributos">https://uniwebsidad.com/libros/xhtml/capitulo-2/etiquetas-y-atributos</a></p>
 
     </article>
-
+    <br>
+    <div>
+        <h3>Imagen muckup</h3>
+        <img src="./Muckup.jpg" alt="">
+    </div>
+    <br>
     <br>
     <br>
 
