--- a/Fase 2/desing.html
+++ b/Fase 2/desing.html
@@ -72,7 +72,7 @@
         </p>
         <h4>Etiquetas HTML básicas</h4>
         <p>
-            Hay una serie de etiquetas que son las más usadas para crear cualquier documento HTML, a continuación las explicamos:
+        <ul>Hay una serie de etiquetas que son las más usadas para crear cualquier documento HTML, a continuación las explicamos:
             <li> < body > para el contenido</li>
             <br>
             <li> < head > para información sobre el documento </li>
@@ -94,6 +94,7 @@
             <li> < p > para parágrafos </li>
             <br>
             <li> < span > para estilos de una parte del texto </li>
+        </ul>
         </p>
         <h4> < body > < /body ></h4>
         <p>
