--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+
     <h1>Proyecto de sitio Web 2022-16-02</h1>
     <h3>Luis Gustavo Gomez Esteban </h3>
     <h3>Ingenieria de Sitemas</h3>
     <h3>24/02/2022</h3>    
     <p>Correo: luisgusg10@hotmail.com</p>
     <p>numero: 3183329567</p>
-    <A href="Fase 2/desing.html">Link </A>
+
+    <a href="Fase 2/desing.html">Fase 2</a>
+    <br>
+    <br>
+    <a href="Fase 3/index.html">Fase 3</a>
 
 </body>
 </html>
