--- a/Fase 3/paginas/Tema1.html
+++ b/Fase 3/paginas/Tema1.html
@@ -12,11 +12,33 @@
         <h4>Etiquetas basicas en HTML</h4>
     </header>
     <hr>
-    <div>
-        <a href="../index.html" class="BotonInicio">
-            Inicio
-        </a>
-    </div>
+    <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li class="dropdown">
+            <a class="dropbtn">Temas</a>
+            <div class="dropdown-content">
+              <a href="Tema1.html">Tema 1</a>
+              <a href="Tema2.html">Tema 2</a>
+            </div>
+          </li>
+        <li class="dropdown">
+          <a class="dropbtn">Recursos Multimedios</a>
+          <div class="dropdown-content">
+            <a href="Recursos1.html">Recurso 1</a>
+            <a href="Recursos2.html">Recurso 2</a>
+          </div>
+        </li>
+        <li class="dropdown">
+            <a class="dropbtn">Aprendizaje</a>
+            <div class="dropdown-content">
+                <a href="Aprendizaje1.html">Aprendizaje 1</a>
+                <a href="Aprendizaje2.html">Aprendizaje 2</a>
+            </div>
+          </li>
+          <li>
+              <a href="autor.html">Autor</a>
+          </li>
+      </ul>
     <div class="container">
     <section>
         <h4>¿Qué es una etiqueta HTML?</h5>
