--- a/Fase 3/index.html
+++ b/Fase 3/index.html
@@ -31,8 +31,8 @@
         <li class="dropdown">
             <a class="dropbtn">Aprendizaje</a>
             <div class="dropdown-content">
-              <a href="#">Aprendizaje 1</a>
-              <a href="#">Aprendizaje 2</a>
+              <a href="paginas/Aprendizaje1.html">Aprendizaje 1</a>
+              <a href="paginas/Aprendizaje2.html">Aprendizaje 2</a>
             </div>
           </li>
           <li>
@@ -63,7 +63,7 @@
           </ul>
         </p>
       </section>
-    <div class="container">
+  <div class="container">
       <p>Universidad abierta y a distancia Dosquebradas</p>
       <br>
       <div class="fb-page" data-href="https://www.facebook.com/unaddosquebradas" data-tabs="timeline" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/unaddosquebradas" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/unaddosquebradas">Universidad UNAD - CIP Dosquebradas</a></blockquote></div>
