--- a/Fase 4/paginas/Tema2.html
+++ b/Fase 4/paginas/Tema2.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Aprendizaje 2</title>
+    <title>Tema 1</title>
   </head>
   <body>
-    <h4 class="text-center mt-2">Cuestionario 2 Atributos y valores en HTML</h4>
+    <h4 class="text-center mt-2">Atributos y valores en HTML</h4>
     <hr>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -61,16 +61,57 @@
   
 
     <div class="container mt-5">
-      <h4 class="mt-3 mb-3">Fomulario</h4>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>      
+        <section>
+            <article>
+                <h4>Atributos y valores en HTML</h4>
+                Atributos basicos
+                <p>
+                    Los siguiente cuatro atributos básicos se pueden aplicar prácticamente a todas las etiquetas HTML:
+                    <br>
+                    <br>
+                    Atributos y valores:
+                    <br>
+                    <ul>
+                        <li> id = "texto" Establece un identificador único a cada elemento dentro de una página HTML </li>
+                        <br>
+                        <li> class = "texto" Establece la clase CSS que se aplica a los estilos del elemento </li>
+                        <br>
+                        <li> style = "texto" Establece de forma directa los estilos CSS de un elemento </li>
+                        <br>
+                        <li> title = "texto" Establece el título a un elemento (mejora la accesibilidad y los navegadores lo muestran cuando el usuario pasa el ratón por encima del elemento) </li>
+                    </ul>
+                    <br>
+                    La mayoría de páginas web actuales utilizan los atributos id y class de forma masiva. Sin embargo, estos atributos sólo son realmente útiles cuando se trabaja con CSS y con Javascript.
+                </p>
+
+                Atributos para internacionalización
+
+                <p>
+                    Estos atributos son útiles para aquellas páginas que muestran sus contenidos en varios idiomas y para aquellas que quieren indicar de forma explítica el idioma de sus contenidos:
+                    <br>
+                    <ul>
+                        <li>lang = "codigo de idioma" Indica el idioma del elemento mediante un código predefinido</li>
+                        <br>
+                        <li> xml:lang = "codigo de idioma" Indica el idioma del elemento mediante un código predefinido</li>
+                        <br>
+                        <li> dir 	Indica la dirección del texto (útil para los idiomas que escriben de derecha a izquierda) </li>
+                    </ul>
+                    <br>
+                </p>
+            </article>
+
+            <article class="mb-5">
+                <h3>Referencias</h3>
+                <p>uniwebsidad. (26 de Abril de 2022). uniwebsidad. Obtenido de <a href="https://uniwebsidad.com/libros/xhtml/capitulo-2/etiquetas-y-atributos">https://uniwebsidad.com/libros/xhtml/capitulo-2/etiquetas-y-atributos</a></p>
+            </article> 
+        </section>      
     </div>
+
+    <footer class="text-center text-white fixed-bottom mt-5" style="background-color: #2a2a2a;">
+        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+          Email: Luisgusg10@hotmail.com Skipe: luisgusg10 Fecha actualización: 11/06/22
+        </div>
+    </footer>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
