--- a/Fase 3/index.html
+++ b/Fase 3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -78,4 +78,104 @@
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v14.0" nonce="b5YDjVFe"></script>
 
+</html>
+
+-->
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Fase 3</title>
+  </head>
+  <body>
+    <h4 class="text-center mt-2">Etiquetas Básicas de HTML, atributos y valores</h4>
+    <hr>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item dropdown ms-4">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Temas
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="paginas/Tema1.html">Tema 1</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="paginas/Tema2.html">Tema 2</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown ms-4">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Recursos Multimedios
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="paginas/Recursos1.html">Recurso 1</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="paginas/Recursos2.html">Recurso 2</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown ms-4">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Aprendizaje
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="paginas/Aprendizaje1.html">Aprendizaje 1</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="paginas/Aprendizaje2.html">Aprendizaje 2</a></li>
+              </ul>
+            </li>
+            <li class="nav-item ms-4">
+              <a class="nav-link" aria-current="page" href="paginas/autor.html">Autor</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container mt-5">
+      <section>
+        <h3>Propósito del sitio</h3>
+        <p>El propósito del sito es enseñar y dar a conocer sobre los siguientes temas de HTML, como lo son las etiquetas básicas, que utilizamos en este sitio web, los atributos y los valores.
+        </p>
+        <p>
+          Por medio del menú que tenemos en el sitio web podremos navegar por las distintas páginas y conocer más a fondo sobre los temas que se plantean en este sito.
+        </p>
+      </section>
+      <section>
+        <h3>Temas principales que veremos en este sitio web </h3>
+        <p>
+          <ul>
+            <li>
+              EL principal tema en este sitio web es el siguiente Etiquetas basicas en HTML.
+            </li>
+            <br>
+            <li>
+              EL secundario tema en este sitio web es el siguiente Atributos y valores en HTML.
+            </li>
+          </ul>
+        </p>
+      </section>
+    <div class="container">
+      <p>Universidad abierta y a distancia Dosquebradas</p>
+      <br>
+      <div class="fb-page" data-href="https://www.facebook.com/unaddosquebradas" data-tabs="timeline" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/unaddosquebradas" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/unaddosquebradas">Universidad UNAD - CIP Dosquebradas</a></blockquote></div>
+    </div>
+    </div>
+
+
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v14.0" nonce="b5YDjVFe"></script>
+  </body>
 </html>
