--- a/Fase 4/paginas/Aprendizaje1.html
+++ b/Fase 4/paginas/Aprendizaje1.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Aprendizaje 2</title>
+    <title>Aprendizaje 1</title>
   </head>
   <body>
-    <h4 class="text-center mt-2">Cuestionario 2 Atributos y valores en HTML</h4>
+    <header class="container-fluid">
+      <h4 class="text-center mt-2">Formulario 1 Etiquetas basicas en HTML</h4>
+    </header>
     <hr>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -58,19 +60,24 @@
         </div>
       </div>
     </nav>
+
+    <main class="container-fluid mt-5 mb-5">
+      <div class="row">
+        <div class="col-8">
+          <iframe width='100%'  height='600px'  scrolling='yes'  src='https:&#x2F;&#x2F;www.goconqr.com&#x2F;es-ES&#x2F;p&#x2F;37035245-cuestionario-1-quizzes?frame=true'  style='border: 1px solid #ccc'  allowfullscreen  webkitallowfullscreen  mozallowfullscreen  oallowfullscreen  msallowfullscreen></iframe><a href='https:&#x2F;&#x2F;www.goconqr.com&#x2F;es&#x2F;tests'>Test creado con GoConqr por Gustavo Gomez</a>
+        </div>
+        <aside class="col-4 text-center">
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Funaddosquebradas%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        </aside>
+      </div>
+    </main>
   
 
-    <div class="container mt-5">
-      <h4 class="mt-3 mb-3">Fomulario</h4>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <footer class="text-center text-white fixed-bottom" style="background-color: #2a2a2a;">
+      <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+        Email: Luisgusg10@hotmail.com Skipe: luisgusg10 Fecha actualización: 11/06/22
       </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>      
-    </div>
+    </footer>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
