--- a/Fase 4/paginas/autor.html
+++ b/Fase 4/paginas/autor.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Aprendizaje 2</title>
+    <title>Autor</title>
   </head>
   <body>
-    <h4 class="text-center mt-2">Cuestionario 2 Atributos y valores en HTML</h4>
+    <h4 class="text-center mt-2">Autor</h4>
     <hr>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -58,19 +58,32 @@
         </div>
       </div>
     </nav>
-  
 
-    <div class="container mt-5">
-      <h4 class="mt-3 mb-3">Fomulario</h4>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <div class="container text-center mt-5">
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="foto mia.jpg" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Sobre el auto</h5>
+              <p class="card-text">Nombre: Luis Gustavo Gomez E.</p>
+              <p>Código: 1112786403.</p>
+              <p>Estudiante de ingeniería de sistemas.</p>
+              <p>Correo electrónico: Luisgusg10@hotmail.com</p>
+              <p>Skype: Luisgusg10.</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>      
     </div>
+
+    <footer class="text-center text-white fixed-bottom" style="background-color: #2a2a2a;">
+      <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+        Email: Luisgusg10@hotmail.com Skipe: luisgusg10 Fecha actualización: 11/06/22
+      </div>
+    </footer>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
