--- a/Fase 4/index.html
+++ b/Fase 4/index.html
@@ -26,7 +26,7 @@
                 Temas
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="paginas/Tema1.html">Tema 1</a></li>
+                <li><a class="dropdown-item" href="paginas/EtiquetasHTML.html">Tema 1</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="paginas/Tema2.html">Tema 2</a></li>
               </ul>
