--- a/Fase 4/paginas/autor.html
+++ b/Fase 4/paginas/autor.html
@@ -26,7 +26,7 @@
                 Temas
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Tema1.html">Tema 1</a></li>
+                <li><a class="dropdown-item" href="EtiquetasHTML.html">Tema 1</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="Tema2.html">Tema 2</a></li>
               </ul>
@@ -63,7 +63,7 @@
       <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="foto mia.jpg" class="img-fluid rounded-start" alt="...">
+            <img src="foto mia.jpg" class="img-fluid rounded-start" alt="Autor de este sitio web" title="Autor">
           </div>
           <div class="col-md-8">
             <div class="card-body">
