--- a/Fase 4/paginas/EtiquetasHTML.html
+++ b/Fase 4/paginas/EtiquetasHTML.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Tema 1</title>
+    <title>Etiquetas HTML</title>
   </head>
   <body>
     <h4 class="text-center mt-2">Etiquetas basicas en HTML</h4>
@@ -26,7 +26,7 @@
                 Temas
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Tema1.html">Tema 1</a></li>
+                <li><a class="dropdown-item" href="EtiquetasHTML.html">Tema 1</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="Tema2.html">Tema 2</a></li>
               </ul>
@@ -81,7 +81,7 @@
                 </p>
     
                 <div class="container-sm text-center">
-                    <img class="ImagenContainer" src="Etiquetas HTML.jpg" alt="">
+                    <img class="ImagenContainer" src="Etiquetas HTML.jpg" alt="Etiquetas basicas en HTMl" title="Etiquetas HTML">
                     <br>I
                     Ricart, F. (2014). ETIQUETAS BÁSICAS INTRODUCTORAS AL HTML5. [Imagen]. Recuperado de https://francescricart.com/etiquetas-basicas-introductoras-al-html5/
                 </div>
